[tool.poetry]
name = "bnavg"
version = "0.1.0"
description = ""
authors = ["Quinn Flavel <quinnydf@yahoo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pgmpy = "^0.1.22"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
